--- a/My-Form/index.html
+++ b/My-Form/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/My-Form/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/src/fontes/fontawesome-free-5.15.4-web/css/all.css">
+    <link rel="stylesheet" href="/My-Form/src/fontes/fontawesome-free-5.15.4-web/css/all.css">
     <title>Meu formulário</title>
 </head>
 <body>
@@ -101,7 +101,7 @@
             <div class="status">
                 <span>Cadastro feito com sucesso!</span>
                 <div class="result">
-                    <img src="/src/img/sucesso-profissional-1200x900.jpg" alt="logo do result">
+                    <img src="/My-Form/src/img/sucesso-profissional-1200x900.jpg" alt="logo do result">
                 </div>
             </div>
             <div class="btn">
@@ -110,6 +110,6 @@
         </div>
     </div>
 
-    <script src="/js/script.js"></script>
+    <script src="/My-Form/js/script.js"></script>
 </body>
 </html>
