--- a/Landing Page One piec/index.html
+++ b/Landing Page One piec/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/Landing Page One piec/css/style.css">
     <link rel="shortcut icon" href="/assets/img/icon.jpg" type="image/x-icon">
     <title>Landingpage One piec</title>
 </head>
 <body>
     <main id="firts-page">
-        <div class="bg-boxFirts">
             <div class="content">
                 <div class="content-header">
-                    <img src="/assets/img/head-onepiec.png" alt="photo-header">
+                    <img src="/Landing Page One piec/assets/img/head-onepiec.png" alt="photo-header">
                 </div>
                 <div class="content-text">
                     <span class="history"></span>
@@ -20,23 +19,22 @@
             </div>
             <nav class="navigate">
                 <div class="box-menu" id="luffy">
-                    <img src="/assets/img/luffy-avatar 1.jpg" alt="avatar-luffy">
+                    <img src="/Landing Page One piec/assets/img/luffy-avatar 1.jpg" alt="avatar-luffy">
                 </div>
                 <div class="box-menu" id="aokiji">
-                    <img src="/assets/img/Aokiji-avatar 1.png" alt="avatar-akiji">
+                    <img src="/Landing Page One piec/assets/img/Aokiji-avatar 1.png" alt="avatar-akiji">
                 </div>
                 <div class="box-menu" id="crocodile">
-                    <img src="/assets/img/crocodile-avatar 1.png" alt="avatar-crocodile">
+                    <img src="/Landing Page One piec/assets/img/crocodile-avatar 1.png" alt="avatar-crocodile">
                 </div>
                 <div class="box-menu" id="zoro">
-                    <img src="/assets/img/zoro-avatar 1.png" alt="avatar-zoro">
+                    <img src="/Landing Page One piec/assets/img/zoro-avatar 1.png" alt="avatar-zoro">
                 </div>
                 <div class="box-menu" id="barbanegra">
-                    <img src="/assets/img/barbanegra 1.png" alt="avatar-barbanegra">
+                    <img src="/Landing Page One piec/assets/img/barbanegra 1.png" alt="avatar-barbanegra">
                 </div>
             </nav>
-        </div>   
     </main>
-    <script src="/js/script.js"></script>
+    <script src="/Landing Page One piec/js/script.js"></script>
 </body>
 </html>
